gcc/testsuite/rust/compile/issue-2125.rs
// { dg-timeout 5 }
struct S<$>; // { dg-error ".*" }
